<!-- Copyright (C) 2015 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <string name="app_name">League of Legends Score Counter</string>
    <string name="action_settings">Settings</string>
    <string name="blue_team">Blue Team</string>
    <string name="red_team">Red Team</string>
    <string name="zero_score">0</string>
    <string name="penta_kill">Penta Kill!</string>
    <string name="quadra_kill">Quadra kill</string>
    <string name="triple_kill">Triple kill</string>
    <string name="double_kill">Double kill</string>
    <string name="kill">Kill</string>
    <string name="new_game">New game</string>
</resources>
